# nuitrack-sdk

./: .gitattributes  CHANGELOG.md  README.md  VERSION
Dockerfiles/: nuitrack.Dockerfile
Examples/: README.md
Examples/cmake/: DetectPlatform.cmake
Examples/nuitrack_android_studio_gl_sample/: README.md  build.gradle  gradle.properties  settings.gradle
Examples/nuitrack_android_studio_gl_sample/app/: build.gradle
Examples/nuitrack_android_studio_gl_sample/app/src/main/cpp/: CMakeLists.txt  NuitrackGLSample.cpp  NuitrackGLSample.h
Examples/nuitrack_android_studio_gl_sample/gradle/wrapper/: gradle-wrapper.properties
Examples/nuitrack_console_sample/: CMakeLists.txt  README.txt
Examples/nuitrack_console_sample/src/: main.cpp
Examples/nuitrack_csharp_device_api_sample/: CMakeLists.txt  Program.cs  README.txt
Examples/nuitrack_csharp_device_api_sample/cmake/: FindCSharp.cmake  FindMono.cmake  UseCSharp.cmake
Examples/nuitrack_csharp_sample/: CMakeLists.txt  Program.cs  README.txt
Examples/nuitrack_csharp_sample/cmake/: FindDotNetFrameworkSDK.cmake  FindMono.cmake  UseCSharp.cmake  UseDotNetFrameworkSdk.cmake
Examples/nuitrack_device_api_sample/: CMakeLists.txt  README.txt
Examples/nuitrack_device_api_sample/src/: main.cpp
Examples/nuitrack_gl_sample/: CMakeLists.txt  README.md  README.txt
Examples/nuitrack_gl_sample/android/: AndroidManifest.xml  README.md  README.txt
Examples/nuitrack_gl_sample/android/arm64-v8a/jni/: Android.mk  Application.mk
Examples/nuitrack_gl_sample/android/armeabi-v7a/jni/: Android.mk  Application.mk
Examples/nuitrack_gl_sample/android/jni/: Android.mk  Application.mk  android_main.cpp
Examples/nuitrack_gl_sample/android/res/values/: strings.xml
Examples/nuitrack_gl_sample/android/src/com/tdv/nuitrack/sdk/samples/: NuitrackGLSampleActivity.java
Examples/nuitrack_gl_sample/src/: NuitrackGLSample.cpp  NuitrackGLSample.h  main.cpp
Examples/nuitrack_multisensor_sample/: CMakeLists.txt  README.md
Examples/nuitrack_multisensor_sample/src/: main.cpp
Examples/nuitrack_ni_gl_sample/: CMakeLists.txt  README.txt
Examples/nuitrack_ni_gl_sample/OpenNI/Include/: XnContext.h  XnCppWrapper.h  XnPlatform.h
Examples/nuitrack_ni_gl_sample/android/: AndroidManifest.xml  README.txt
Examples/nuitrack_ni_gl_sample/android/arm64-v8a/jni/: Android.mk  Application.mk
Examples/nuitrack_ni_gl_sample/android/armeabi-v7a/jni/: Android.mk  Application.mk
Examples/nuitrack_ni_gl_sample/android/jni/: Android.mk  Application.mk  android_main.cpp
Examples/nuitrack_ni_gl_sample/android/res/values/: strings.xml
Examples/nuitrack_ni_gl_sample/android/src/com/tdv/nuitrack/sdk/samples/: NuitrackGLSampleNIActivity.java
Examples/nuitrack_ni_gl_sample/src/: NiGLSample.cpp  NiGLSample.h  main.cpp
Nuitrack/include/nuitrack/: ModuleFunctions.h  Nuitrack.h
Nuitrack/include/nuitrack/capi/: ColorSensor_CAPI.h  DepthSensor_CAPI.h  GestureRecognizer_CAPI.h  HandTracker_CAPI.h  IOS_StructureCallbackProvider_CAPI.h  IssueTracker_CAPI.h  NuitrackDevice_CAPI.h  Nuitrack_CAPI.h  Public_Nuitrack_CAPI.h
Nuitrack/include/nuitrack/modules/: ColorSensor.h  GestureRecognizer.h  HandTracker.h  Module.h  NuitrackModule.h  SkeletonTracker.h  UserTracker.h
Nuitrack/include/nuitrack/types/: BoundingBox.h  Color3.h  DepthFrame.h  Error.h  FrameBorderIssue.h  Gesture.h  GestureData.h  Hand.h  HandTrackerData.h  Human.h  HumanData.h  IssuesData.h  NuitrackDevice.h  NuitrackDeviceCommon.h  ObjectData.h  Orientation.h  OutputMode.h  RGBFrame.h  RGBMark.h  SensorIssue.h  Skeleton.h  SkeletonData.h  User.h  Vector3.h
Nuitrack/lib/win32/: middleware.lib  nuitrack.lib
Nuitrack/lib/win64/: middleware.lib  nuitrack.lib
PythonNuitrack-beta/: README.MD
TouchDesigner/: Nuitrack-Sample.toe  README.md
Unity3D/: NuitrackSDK.unitypackage  README.md
Unity3D/doc/: Components.md  Development.md  Multisensor.md
UnrealEngine/: README.md
UnrealEngine/Nuitrack/: NuiActivity.java  Nuitrack.Build.cs  VicoVR_APL.xml
UnrealEngine/NuitrackPluginForUE4/: NuitrackPlugin.uplugin
doc/: Architecture.md  Architecture_page.html  BestPractices_page.html  BestPractices_page.js  BoundingBox_8h_source.html  CSV_Recorder.md  Color3_8h_source.html  ColorSensor_8h_source.html  DepthFrame_8h_source.html  DepthSensor_8h_source.html  Device_API.md  Error_8h_source.html  ExampleDescription_page.html  Export_8h_source.html  Failure_Case_Recorder.md  FrameBorderIssue_8h_source.html  Frame_8h_source.html  General_preparations.md  GestureData_8h_source.html  GestureRecognizer_8h_source.html  Gesture_8h_source.html  HandTrackerData_8h_source.html  HandTracker_8h_source.html  Hand_8h_source.html  Hand_Tracking.md  Install.md  Installation_instructions.md  Installation_page.html  Instance-based_API.md  Instance_based_API.html  Issue_8h_source.html  IssuesData_8h_source.html  Licensing.md  Moving_Sensor.md  Multiple_Depth_Sensors.md  Nuitrack_8h_source.html  Nuitrack_AI.md  Nuitrack_Daemon.md  Nuitrack_Integration.md  Nuitrack_linking.md  (+664 more)
doc/resource/: markers.xml
doc/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+94 more)
iOS-beta/: README.md
iOS-beta/nuitrack_sample/Structure.framework/: Info.plist
iOS-beta/nuitrack_sample/nuitrack.framework/: Info.plist
iOS-beta/nuitrack_sample/nuitrack_sample/: AppDelegate.h  AppDelegate.m  ImageConversions.h  ImageConversions.mm  Info.plist  NuitrackDrawing.h  NuitrackDrawing.mm  NuitrackModules.cpp  NuitrackModules.h  Singleton.h  StructureCallbackReceiver.h  StructureCallbackReceiver.mm  ViewController.h  ViewController.mm  main.m
iOS-beta/nuitrack_sample/nuitrack_sample.xcodeproj/: project.pbxproj
(+172 files in other folders)
